--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,3 +21,14 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+.search-wrapper-light {
+  border-bottom: 2px solid rgba(255,255,255,0.5);
+  background: none;
+  border-radius: 0;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.search-wrapper-light input, .search-wrapper-light input::-webkit-input-placeholder {
+  color: #ffffff;
+}
