started working on api and added postgres database

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,11 +21,8 @@
         <ion-item nav-clear menu-close href="#/app/restaurants">
           By Name
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
+        <ion-item nav-clear menu-close href="#/app/bytype">
+          By Type
         </ion-item>
       </ion-list>
     </ion-content>
