friday afternoon commit

--- a/www/templates/restaurant.html
+++ b/www/templates/restaurant.html
@@ -2,7 +2,7 @@
   <ion-content direction="xy" zoom="true">
     <ion-scroll zooming="true">
     <div class="item item-image" href="#/app/restaurant/{{restaurant.id}}">
-      <img ng-src="{{restaurant.description}}"
+      <img ng-src="{{restaurant.menulink}}"
     </ion-scroll>
   </ion-content>
 </ion-view>
