--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,6 +24,9 @@
         <ion-item nav-clear menu-close href="#/app/bytype">
           By Type
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/camera">
+          Camera
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
